--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "webapp",
   "authors": [
-    "MengHongYuan <menghongyuan@qq.com>"
+    "<menghongyuan@qq.com>"
   ],
   "description": "angularjs webapp",
   "main": "",
